Change color for text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello word</h1>
-    <h1>Hello bayouser</h1>
+    <h1 style="color: yellow;">Hello word</h1>
+    <h1 style="color: red;">Hello bayouser</h1>
+    <h1 style="color: blue;">how are you ?</h1>
 </body>
 </html>
